Bug 70268 - The TextTrack 'mode' attribute should have values DISABLED, HIDDEN, and SHOWING, not OFF, HIDDEN, and SHOWING
Summary: The TextTrack 'mode' attribute should have values DISABLED, HIDDEN, and SHOWI...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Media (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Anna Cavender
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-17 14:00 PDT by Anna Cavender
Modified: 2011-10-18 09:06 PDT (History)
3 users (show)

See Also:


Attachments
Patch (2.15 KB, patch)
2011-10-17 14:10 PDT, Anna Cavender
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Anna Cavender 2011-10-17 14:00:25 PDT
The whatwg spec changed slightly to use DISABLED instead of OFF for TextTrack mode:
http://www.whatwg.org/specs/web-apps/current-work/multipage/the-video-element.html#dom-texttrack-mode
Comment 1 Anna Cavender 2011-10-17 14:10:57 PDT
Created attachment 111319 [details]
Patch
Comment 2 WebKit Review Bot 2011-10-17 14:13:31 PDT
Attachment 111319 [details] did not pass style-queue:

Failed to run "['Tools/Scripts/update-webkit', '--chromium']" exit_code: 2

Updating OpenSource
From git://git.webkit.org/WebKit
   466a1d4..b98b9c1  master     -> origin/master
	M	LayoutTests/platform/chromium/test_expectations.txt
	M	LayoutTests/ChangeLog
r97647 = b98b9c1b40b87810b122fce6bb91cff107b24376 (refs/remotes/trunk)
First, rewinding head to replay your work on top of it...
Fast-forwarded master to refs/remotes/trunk.
Updating chromium port dependencies using gclient...
Error: Can't switch the checkout to http://v8.googlecode.com/svn/branches/3.6@9637; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again.
Re-trying 'depot_tools/gclient sync'
Error: Can't switch the checkout to http://v8.googlecode.com/svn/branches/3.6@9637; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again.
Re-trying 'depot_tools/gclient sync'
Error: Can't switch the checkout to http://v8.googlecode.com/svn/branches/3.6@9637; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again.
Error: 'depot_tools/gclient sync' failed 3 tries and returned 256 at Tools/Scripts/update-webkit-chromium line 107.
Re-trying 'depot_tools/gclient sync'
No such file or directory at Tools/Scripts/update-webkit line 104.


If any of these errors are false positives, please file a bug against check-webkit-style.
Comment 3 Daniel Bates 2011-10-18 00:38:31 PDT
Comment on attachment 111319 [details]
Patch

r=me
Comment 4 WebKit Review Bot 2011-10-18 09:06:14 PDT
Comment on attachment 111319 [details]
Patch

Clearing flags on attachment: 111319

Committed r97762: <http://trac.webkit.org/changeset/97762>
Comment 5 WebKit Review Bot 2011-10-18 09:06:19 PDT
All reviewed patches have been landed.  Closing bug.