Change TextTrack to use the word DISABLED instead of OFF for mode https://bugs.webkit.org/show_bug.cgi?id=70268

Reviewed by Daniel Bates.

No new tests. No new functionality.

* html/TextTrack.cpp:
(WebCore::TextTrack::setMode): use Disabled instead of Off
* html/TextTrack.h: update Mode enum to use Disabled instead of Off


Canonical link: https://commits.webkit.org/86482@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97762 268f45cc-cd09-0410-ab3c-d52691b4dbfc